--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <div id="project">
             <div class="project">            
                 <img src="https://cdn.discordapp.com/attachments/709849847242424320/955523835711602688/unknown.png" alt="Project" class="project-img">
-                <a href="" class="project-tile">Tribute Page</a>          
+                <a href="https://pedroddjkkk.github.io/TributePage/" class="project-tile">Tribute Page</a>          
             </div>
             <div class="project">            
                 <img src="https://cdn.discordapp.com/attachments/709849847242424320/955523880448036905/unknown.png" alt="Project" class="project-img">
-                <a href="" class="project-tile">Survey Form</a>          
+                <a href="https://pedroddjkkk.github.io/SurveyForm/" class="project-tile">Survey Form</a>          
             </div>
             <div class="project">            
                 <img src="https://cdn.discordapp.com/attachments/709849847242424320/955524008739242064/unknown.png" alt="Project" class="project-img">
-                <a href="" class="project-tile">Product Page</a>          
+                <a href="https://pedroddjkkk.github.io/ProductPage/" class="project-tile">Product Page</a>          
             </div>
         </div>
     </section>
